--- a/src/CustomerSite/Views/Home/SubscriptionDetail.cshtml
+++ b/src/CustomerSite/Views/Home/SubscriptionDetail.cshtml
@@ -1,69 +1,60 @@
 ﻿@model Marketplace.SaaS.Accelerator.Services.Models.SubscriptionResultExtension
 
 <div>
-    <div class="modal-dialog modal-lg mt200" data-backdrop="static">
-        <div class="modal-content">
-            <div class="modal-header header-bg">
-                <h4><span class="cm-section-heading">Change Plan</span></h4>
-                <button type="button" class="close text-right" data-dismiss="modal">&times;</button>
-            </div>
-            <form asp-action="ChangeSubscriptionPlan" id="frmSubscriptionDetail" method="post">
-                <div class="modal-body text-center">
-                    <dl class="row text-left">
-                        <dt class="col-sm-4 pl80">
-                            @Html.DisplayNameFor(model => model.Id)
-                        </dt>
-                        <dd class="col-sm-8 pl80">
-                            @Html.DisplayFor(model => model.Id)
-                        </dd>
-                        <dt class="col-sm-4 pl80">
-                            @Html.DisplayNameFor(model => model.Name)
-                        </dt>
-                        <dd class="col-sm-8 pl80">
-                            @Html.DisplayFor(model => model.Name)
-                        </dd>
-                        <dt class="col-sm-4 pl80">
-                            @Html.DisplayNameFor(model => model.SubscriptionStatus)
-                        </dt>
-                        <dd class="col-sm-8 pl80">
-                            @Html.DisplayFor(model => model.SubscriptionStatus)
-                        </dd>
-                        <dt class="col-sm-4 pl80">
-                            @Html.DisplayName("Current Plan")
-                        </dt>
-                        <dd class="col-sm-8 pl80">
-                            @Html.DisplayFor(model => model.PlanId)
-                        </dd>
-                        <dt class="col-sm-4  pl80">
-                            @Html.DisplayName("Change Plan")
-                        </dt>
-                        <dd class="col-sm-8  pl80">
-                            @Html.DropDownListFor(s => s.PlanId, new SelectList(Model.PlanList, "PlanId", "PlanId", Model.PlanId), new { @class = "form-control w-100" })
-                            @Html.HiddenFor(s => s.Id)
-                            @Html.HiddenFor(s => s.PlanId)
-                            @Html.HiddenFor(s => s.SubscribeId)
-                        </dd>
-                    </dl>
-                    @*<div class="row pr-3 pt-3 mt-5 pb-3 text-right" style="background-color:#F2F2F2">
-                            <div class="col-sm-4 text-right  font-weight-bold">
-                                @Html.DisplayName("Change Plan")
-                            </div>
-                            <div class="col-sm-5">
-                                @Html.DropDownListFor(s => s.PlanId, new SelectList(Model.PlanList, "PlanId", "PlanId", Model.PlanId), new { @class = "form-control w-100" })
-                                @Html.HiddenFor(s => s.Id)
-                                @Html.HiddenFor(s => s.PlanId)
-                                @Html.HiddenFor(s => s.SubscribeId)
-                            </div>
-                            <button type="button" onclick="confirmDialog()" class="btn btn-success text-right">Change Plan</button>
-                        </div>*@
-                    <div class="text-right">
-                        <div id="frmSpinner" class="spinner-border mt-2" role="status" style="margin-bottom: -10px; margin-right: 20px;" hidden>
-                            <span class="sr-only">Processing...</span>
-                        </div>
-                        <button id="frmButton" type="button" onclick="confirmDialog()" class="btn cm-button-default text-right">Change Plan</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
+	<div class="modal-dialog modal-lg mt200" data-backdrop="static">
+		<div class="modal-content">
+			<div class="modal-header bg-primary text-white">
+				<h4 class="col-12 modal-title text-center">Change Plan</h4>
+			</div>
+			<form asp-action="ChangeSubscriptionPlan" id="frmSubscriptionDetail" method="post">
+				<div class="modal-body border text-center">
+					<dl class="row text-left">
+						<dt class="col-sm-4 pl80 border">
+							@Html.DisplayNameFor(model => model.Id)
+						</dt>
+						<dd class="col-sm-8 pl80 border">
+							@Html.DisplayFor(model => model.Id)
+						</dd>
+						<dt class="col-sm-4 pl80 border">
+							@Html.DisplayNameFor(model => model.Name)
+						</dt>
+						<dd class="col-sm-8 pl80 border">
+							@Html.DisplayFor(model => model.Name)
+						</dd>
+						<dt class="col-sm-4 pl80 border">
+							@Html.DisplayNameFor(model => model.SubscriptionStatus)
+						</dt>
+						<dd class="col-sm-8 pl80 border">
+							@Html.DisplayFor(model => model.SubscriptionStatus)
+						</dd>
+						<dt class="col-sm-4 pl80 border">
+							@Html.DisplayName("Current Plan")
+						</dt>
+						<dd class="col-sm-8 pl80 border">
+							@Html.DisplayFor(model => model.PlanId)
+						</dd>
+						<dt class="col-sm-4  pl80 border">
+							@Html.DisplayName("Change Plan")
+						</dt>
+						<dd class="col-sm-8  pl80 border">
+							@Html.DropDownListFor(s => s.PlanId, new SelectList(Model.PlanList, "PlanId", "PlanId", Model.PlanId), new { @class = "form-control w-100" })
+							@Html.HiddenFor(s => s.Id)
+							@Html.HiddenFor(s => s.PlanId)
+							@Html.HiddenFor(s => s.SubscribeId)
+						</dd>
+					</dl>
+					<div class="text-left">
+						<div id="frmSpinner" class="spinner-border mt-2" role="status" style="margin-bottom: -10px; margin-right: 20px;" hidden>
+							<span class="sr-only">Processing...</span>
+						</div>
+						<div class="col-11 text-center align-items-left">
+							<button id="frmButton" type="button" onclick="confirmDialog()" class="btn btn-primary">Change Plan</button>
+							<button type="button" class="btn btn-primary text-center bg-secondary" data-dismiss="modal">Close</button>
+						</div>						
+					</div>
+
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
