--- a/src/CustomerSite/Views/Home/SubscriptionLogDetail.cshtml
+++ b/src/CustomerSite/Views/Home/SubscriptionLogDetail.cshtml
@@ -1,49 +1,57 @@
 ﻿@model List<Marketplace.SaaS.Accelerator.DataAccess.Entities.SubscriptionAuditLogs>
-
-<div class="modal-dialog modal-lg modal-dialog-scrollable">
-    <div class="modal-content">
-        <div class="modal-header header-bg">
-            <h4><span class="cm-section-heading"> Activity Log</span></h4>
-            <button type="button" class="close text-right" data-dismiss="modal">&times;</button>
-        </div>
-        <div class="modal-body">
-            <div class="card card-header mb0 pb0">
-                <dl class="row">
-                    <dt class="col-2 text-right"><b>Plan</b></dt>
-                    <dd class="col-3 text-left">@Model.FirstOrDefault()?.Subscription?.AmpplanId</dd>
-                    <dt class="col-3 text-right"><b>Subscription</b></dt>
-                    <dd class="col-4 text-left">@Model.FirstOrDefault()?.Subscription?.Name</dd>
-                </dl>
-            </div>
-            <table class="table-bordered table-responsive cm-table">
-                <thead class="cm-table-head">
-                    <tr>
-                        <th width="20%">Activity Log Time</th>
-                        <th width="20%">Subscription Name</th>
-                        <th width="10%">Attribute</th>
-                        <th width="10%">Old Value</th>
-                        <th width="10%">New Value</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var log in Model)
-                    {
-                        <tr>
-                            <td class="text-left">
-                                @if (log.CreateDate != null && log.CreateDate.HasValue)
-                                {@log.CreateDate.Value.ToString("MM/dd/yyyy hh:mm tt")}
-                            </td>
-                            <td class="text-left">@log.Subscription.Name</td>
-                            <td class="text-left">@log.Attribute</td>
-                            <td class="text-left">@log.OldValue</td>
-                            <td class="text-left">@log.NewValue</td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-            @*<div class="modal-footer">
-                <button type="button" class="btn btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span>Cancel</button>
-            </div>*@
-        </div>
-    </div>
+<div class="modal-dialog modal-xl modal-dialog-scrollable modal-dialog-centered" role="document">
+	<div class="modal-content">
+		<div class="modal-header bg-primary text-white">
+			<h4 class="col-12 modal-title text-center">ACTIVITY LOGS</h4>
+		</div>
+		<div class="modal-body">
+			<div class="table">
+				<table class="table-borderless" aria-label="ACTIVITY LOGS">
+					<tr>
+						<td class="text-left"><b>Plan</b></td>
+						<td class="text-left">@Model.FirstOrDefault()?.Subscription?.AmpplanId</td>
+					</tr>
+					<tr>
+						<td class="text-right"><b>Subscription</b></td>
+						<td class="text-left">@Model.FirstOrDefault()?.Subscription?.Name</td>
+					</tr>
+				</table>
+			</div>
+			<div class="table-wrapper-scroll-y my-custom-scrollbar">
+				<table id="activityLog" aria-label="ACTIVITY LOGS" class="table table-striped table-hover">
+					<thead class="table-secondary">
+						<tr>
+							<th class="text-left" width="22%">Activity Log Time</th>
+							<th class="text-left" width="20%">Subscription Name</th>
+							<th class="text-left" width="10%">Attribute</th>
+							<th class="text-left" width="10%">Old Status</th>
+							<th class="text-left" width="10%">New Status</th>
+						</tr>
+					</thead>
+					<tbody>
+						@foreach (var log in Model)
+						{
+							<tr>
+								<td class="text-left">
+									@if (log.CreateDate != null && log.CreateDate.HasValue)
+									{
+										@log.CreateDate.Value.ToString("MM/dd/yyyy hh:mm tt")
+									}
+								</td>
+								<td class="text-left">@log.Subscription.Name</td>
+								<td class="text-left">@log.Attribute</td>
+								<td class="text-left">@log.OldValue</td>
+								<td class="text-left">@log.NewValue</td>
+							</tr>
+						}
+					</tbody>
+				</table>
+			</div>
+			<div class="modal-footer">
+				<div class="col-12 text-center align-items-center">
+					<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
