--- a/src/CustomerSite/Views/Shared/_Layout.cshtml
+++ b/src/CustomerSite/Views/Shared/_Layout.cshtml
@@ -1,84 +1,100 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
-    <link rel="stylesheet" href="~/css/customer-site.css" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Landing Page</title>
+	<link rel="stylesheet" href="~/css/customer-site.css" />
 
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <link href="~/lib/Datatable/css/dataTables.bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/Datatable/css/responsive.bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/Datatable/css/jquery.dataTables.min.css" rel="stylesheet" />
-    <link href="~/lib/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/css/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <link rel="stylesheet" href="~/css/customer-custom.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-    <link href="~/lib/bootstrap/4.4.1/css/customer-offcanvas.css" rel="stylesheet" />
+	<script src="~/lib/jquery/dist/jquery.js"></script>
+	<script src="~/lib/jquery/dist/jquery.min.js"></script>
+	<link href="~/lib/Datatable/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+	<link href="~/lib/Datatable/css/responsive.bootstrap.min.css" rel="stylesheet" />
+	<link href="~/lib/Datatable/css/jquery.dataTables.min.css" rel="stylesheet" />
+	<link href="~/lib/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="~/css/font-awesome/css/font-awesome.css" rel="stylesheet" />
+	<link rel="stylesheet" href="~/css/customer-custom.css" />
+	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+	<link href="~/lib/bootstrap/4.4.1/css/customer-offcanvas.css" rel="stylesheet" />
+
+	<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
+
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark cm-top-nav-bar">
-        <a class="navbar-brand mr-auto mr-lg-0" href="@Url.Action("Index", "Home")">
-            <img class="cm-logo pull-left" src="~/contoso-sales.png" />
-            @*<img class="cm-logo pull-left" src="https://kblnuser.azurewebsites.net/logo.png" />*@
-        </a>
-        @*<a class="navbar-brand mr-auto mr-lg-0" asp-area="" asp-controller="Home" asp-action="Index">SaasKit Demo</a>*@
+	<nav class="navbar navbar-expand-lg fixed-top navbar-dark cm-top-nav-bar">
+		<a class="navbar-brand mr-auto mr-lg-0" href="@Url.Action("Index", "Home")">
+			<img class="cm-logo pull-left" src="~/contoso-sales.png" />
+			@*<img class="cm-logo pull-left" src="https://kblnuser.azurewebsites.net/logo.png" />*@
+		</a>
+		@*<a class="navbar-brand mr-auto mr-lg-0" asp-area="" asp-controller="Home" asp-action="Index">SaasKit Demo</a>*@
 
-        <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-            <div class="navbar-nav mr-auto">
+		<div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+			<div class="navbar-nav mr-auto">
+			</div>
 
-            </div>
+			<div class="form-inline my-2 my-lg-0">
+				@if (this.User.Identity.IsAuthenticated)
+				{
+					<li class="btn-group nav">
+						<button type="button" class="text-white user-icon bi bi-person-circle btn navbar-btn" data-toggle="dropdown">
+							<span class="caret"></span>
+							<span class="sr-only">Toggle Dropdown</span>
+						</button>
 
-            <div class="form-inline my-2 my-lg-0">
-                @if (this.User.Identity.IsAuthenticated)
-                {
-                    <span class="cm-username text-white">@User.Identity.Name&nbsp;</span>
-                    <a class="text-white cm-logout" asp-controller="Account" asp-action="SignOut">&nbsp;<i class="fa fa-sign-out fa-2x"></i></a>
-                }
-                else
-                {
-                    <a class="text-white" asp-controller="Account" asp-action="SignIn">Sign in</a>
-                }
-            </div>
-        </div>
-    </nav>
-    <div class="nav-scroller bg-white shadow-sm cm-menu-bar">
-        <nav class="container pb-3 nav nav-underline">
-            <a class="nav-link active">
-                @if (this.User.Identity.IsAuthenticated)
-                {
-                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    @if (TempData["ShowWelcomeScreen"] != null && Convert.ToString(TempData["ShowWelcomeScreen"]) == "True")
-                    {
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Subscriptions">Subscriptions</a>
-                    }
-                }
-            </a>
-        </nav>
-    </div>
-    <div class="container pb-3">
-        <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+						<ul class="dropdown-menu user-details" role="menu">
+							<li><b>@User.Identity.Name</b></li>
+							<li>
+								<a asp-controller="Account" asp-action="SignOut">Sign Out</a>
+							</li>
+						</ul>
+					</li>
+				}
+				else
+				{
+					<a class="text-white" asp-controller="Account" asp-action="SignIn">Sign in</a>
+				}
+			</div>
+		</div>
+	</nav>
+	<div class="container cm-menu-bar">
+		<ul class="nav nav-tabs">
+			@if (this.User.Identity.IsAuthenticated)
+			{
+				<li class="nav-item" role="presentation">
+					<a class="nav-link @(ViewContext.RouteData.Values["Action"].ToString() == "Index" ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+				</li>
+				@if (TempData["ShowWelcomeScreen"] != null)
+				{
+					<li class="nav-item" role="presentation">
+						<a class="nav-link @(ViewContext.RouteData.Values["Action"].ToString() == "Subscriptions" || ViewContext.RouteData.Values["Action"].ToString() == "ViewSubscription" ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Subscriptions">Subscriptions</a>
+					</li>
+				}
+			}
+		</ul>
+	</div>
+	<div class="container pb-3">
+		<partial name="_CookieConsentPartial" />
+		<main role="main" class="card pb-3">
+			@RenderBody()
+		</main>
+	</div>
 
-    <footer class="cm-footer">
-        <div class="container text-center">
-            &copy; 2020 - SaasKit - Demo
-        </div>
-    </footer>
+	<footer class="cm-footer">
+		<div class="container text-center">
+			&copy; 2020 - SaasKit - Demo
+		</div>
+	</footer>
 
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="~/lib/jquery/dist/jquery.js"></script>
+	<script src="~/lib/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-    <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" asp-append-version="true"></script>
-    <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" asp-append-version="true"></script>
-    <script src="~/lib/bootstrap/4.4.1/js/offcanvas.js"></script>
+	<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" asp-append-version="true"></script>
+	<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" asp-append-version="true"></script>
+	<script src="~/lib/bootstrap/4.4.1/js/offcanvas.js"></script>
 
-    @RenderSection("Scripts", required: false)
+	@RenderSection("Scripts", required: false)
 </body>
 </html>
