Changes in User Profile

--- a/src/CustomerSite/wwwroot/css/customer-custom.css
+++ b/src/CustomerSite/wwwroot/css/customer-custom.css
@@ -537,3 +537,8 @@ table.dataTable thead .sorting_desc_disabled::after {
     position: sticky;
     top: 0;
 }
+
+.dropdown-custom-menu {
+    left: -100px;
+    min-width: 25rem;
+}
