--- a/src/CustomerSite/Views/Shared/_Layout.cshtml
+++ b/src/CustomerSite/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 			<div class="navbar-nav mr-auto">
 			</div>
 
-			<div class="form-inline my-2 my-lg-0">
+			<ul class="form-inline my-2 my-lg-0">
 				@if (this.User.Identity.IsAuthenticated)
 				{
 					<li class="btn-group nav">
@@ -42,10 +42,17 @@
 							<span class="sr-only">Toggle Dropdown</span>
 						</button>
 
-						<ul class="dropdown-menu user-details" role="menu">
-							<li><b>@User.Identity.Name</b></li>
-							<li>
-								<a asp-controller="Account" asp-action="SignOut">Sign Out</a>
+						<ul class="dropdown-menu user-details dropdown-custom-menu p-2" role="menu">
+							<li class="d-flex justify-content-between">
+								<span>@User?.Claims.FirstOrDefault(s => s.Type =="http://schemas.microsoft.com/identity/claims/tenantid")?.Value</span>
+								<span><a asp-controller="Account" asp-action="SignOut">Sign Out</a></span>
+							</li>
+							<li class="d-flex p-4">
+								<div class="p-3" id="username_initial" style='border-radius: 40px; width: 80px; height: 80px;background-color:darkblue; font-size:30px;color:white'></div>
+								<div class="px-4">
+									<div id="username" style='text-align:start;font-weight:700;font-size:x-large'>@User.Identity.Name</div>
+									<div style='text-align:start'>@User?.Claims.FirstOrDefault(s => s.Type =="preferred_username")?.Value</div>
+								</div>
 							</li>
 						</ul>
 					</li>
@@ -54,7 +61,7 @@
 				{
 					<a class="text-white" asp-controller="Account" asp-action="SignIn">Sign in</a>
 				}
-			</div>
+			</ul>
 		</div>
 	</nav>
 	<div class="container cm-menu-bar">
@@ -96,5 +103,18 @@
 	<script src="~/lib/bootstrap/4.4.1/js/offcanvas.js"></script>
 
 	@RenderSection("Scripts", required: false)
+	<script>
+		function setUserNameInitials() {
+			var username = $('#username').text()
+			const names = username.split(" ");
+			var nameInitials = "";
+
+			for (let i = 0; i < names.length; i++) {
+				nameInitials = names[0][0] + names[names.length - 1][0];
+			}
+			$('#username_initial').text(nameInitials);
+		}
+		setUserNameInitials();
+	</script>
 </body>
 </html>
